Fix a bug when collapsing sidebar

--- a/src/app/sidenav/sidenav.component.scss
+++ b/src/app/sidenav/sidenav.component.scss
@@ -66,10 +66,45 @@
 .sidenav__tab {
   border-right: 1px solid rgba(0, 0, 0, .12);
   color: rgba(0, 0, 0, .2);
+  height: 100%;
+  flex: 1;
 
   &:last-child {
     border-right: none;
   }
+}
+
+.sidenav__tab-icon {
+  color: rgba(0, 0, 0, .38);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  &,
+  &:active,
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+
+  &:hover {
+    background-color: rgba(0, 0, 0, .1);
+  }
+}
+
+.active .sidenav__tab-icon {
+  background-color: rgba(0, 0, 0, .38);
+}
+
+.sidenav__tabs {
+  list-style: none;
+  display: flex;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  border: 0;
 }
 
 @each $name, $color in $colors {
@@ -82,8 +117,7 @@
       background-color: rgba($color, .8);
     }
 
-    /* override bootstrap style */
-    .sidenav__tabs > .sidenav__tab.active > a {
+    .active .sidenav__tab-icon {
       color: rgba($color, .8);
     }
 
@@ -92,23 +126,6 @@
       border-color: $color;
     }
   }
-}
-
-/* override bootstrap style */
-.sidenav__tabs > .sidenav__tab > a {
-  padding: 5px 10px;
-  color: rgba(0, 0, 0, .38);
-  border-radius: 0;
-}
-
-/* override bootstrap style */
-.sidenav__tabs > .sidenav__tab > a:hover {
-  background-color: rgba(0, 0, 0, .1);
-}
-
-/* override bootstrap style */
-.sidenav__tabs > .sidenav__tab.active > a {
-  background-color: rgba(0, 0, 0, .38);
 }
 
 .sidenav__content {
