--- a/src/app/user-view/user-view.component.scss
+++ b/src/app/user-view/user-view.component.scss
@@ -12,6 +12,7 @@
 .sidenav {
   height: 100%;
   width: 250px;
+  overflow-x: hidden;
   transition: width .25s cubic-bezier(.4, 0, .6, 1);
 }
 
